# oteapi-plugin-template

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  requirements.txt
.github/: dependabot.yml
.github/utils/: cookiecutter_values.yaml  pyproject_toml_update_pr_body.txt  requirements.txt  single_dependency_pr_body.txt
.github/workflows/: cd_dependencies.yml  ci_automerge_bot_prs.yml  ci_automerge_dependabot.yml  ci_bot_pr_changes.yml  ci_dependabot.yml  ci_tests.yml  ci_update_pre-commit.yml  ci_updated_master.yml  main.yml
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_docs.txt  setup.cfg  setup.py  tasks.py
{{ cookiecutter.project_slug }}/.github/: dependabot.yml
{{ cookiecutter.project_slug }}/.github/utils/: release_tag_msg.txt  single_dependency_pr_body.txt
{{ cookiecutter.project_slug }}/.github/workflows/: cd_dependencies.yml  cd_release.yml  ci_automerge_bot_prs.yml  ci_automerge_dependabot.yml  ci_bot_pr_changes.yml  ci_cd_updated_main.yml  ci_dependabot.yml  ci_tests.yml
{{ cookiecutter.project_slug }}/docs/: .pages  all_strategies.md  index.md
{{ cookiecutter.project_slug }}/docs/api_reference/strategies/: download.md  filter.md  function.md  mapping.md  parse.md  resource.md  transformation.md
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_parse.py
{{ cookiecutter.project_slug }}/tests/strategies/: conftest.py  test_download.py  test_filter.py  test_function.py  test_mapping.py  test_parse.py  test_resource.py  test_transformation.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/strategies/: download.py  filter.py  function.py  mapping.py  parse.py  resource.py  transformation.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/strategies/download/: demo.py
