[options.entry_points]
oteapi.download_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.download.demo
oteapi.filter_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.filter.demo
oteapi.mapping_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.mapping.demo
oteapi.resource_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.resource.demo
oteapi.transformation_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.transformation.demo
oteapi.parse_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.parse.demo
