[options.entry_points]
oteapi.download_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.download
oteapi.filter_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.filter
oteapi.mapping_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.mapping
oteapi.resource_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.resource
oteapi.transformation_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.transformation
oteapi.parse_strategy =
  {{ cookiecutter.package_name }}.demo = {{ cookiecutter.package_name }}.strategies.parse
