# Either uncomment the strategy lines as they are needed
# or remove them if they are not needed.
[options.entry_points]
oteapi.download =
  # {{ cookiecutter.package_name }}.fileDEMO = {{ cookiecutter.package_name }}.strategies.download:DemoFileStrategy
oteapi.filter =
  # {{ cookiecutter.package_name }}.filter/DEMO = {{ cookiecutter.package_name }}.strategies.filter:DemoFilter
oteapi.function =
  # {{ cookiecutter.package_name }}.function/DEMO = {{ cookiecutter.package_name }}.strategies.function:DemoFunctionStrategy
oteapi.mapping =
  # {{ cookiecutter.package_name }}.mapping/DEMO = {{ cookiecutter.package_name }}.strategies.mapping:DemoMappingStrategy
oteapi.parse =
  # {{ cookiecutter.package_name }}.text/jsonDEMO = {{ cookiecutter.package_name }}.strategies.parse:DemoJSONDataParseStrategy
oteapi.resource =
  # {{ cookiecutter.package_name }}.DEMO-access-service = {{ cookiecutter.package_name }}.strategies.resource:DemoResourceStrategy
oteapi.transformation =
  # {{ cookiecutter.package_name }}.script/DEMO = {{ cookiecutter.package_name }}.strategies.transformation:DummyTransformationStrategy
